# family-info-hub

./: .envrc.example  .gitignore  .gitleaks.toml  .gitleaksignore  ARCHITECTURE.md  CLAUDE.md  README.md
.github/workflows/: agent-test.yml  cdk-test.yml  gitleaks.yml  setup-aws-oidc.md
.kiro/steering/: git-commit-rules.md  python-uv-management.md
agent/: .gitignore  Dockerfile  README.md  my_agent.py  pyproject.toml
agent/tests/: test_agent.py
cdk-agentcore/: README.md  app.py  main.py  pyproject.toml  requirements.txt
cdk-agentcore/cdk_agentcore/: cdk_agentcore_stack.py
cdk-agentcore/tests/integration/: __init__.py  test_deployed_agent.py
cdk-agentcore/tests/unit/: test_cdk_agentcore_stack.py
docs/: ARCHITECTURE.md  GIT_HISTORY_CLEANUP.md  LINE_CREDENTIALS_SETUP.md  LINE_MESSAGE_NOT_RECEIVED.md  LINE_SETUP.md  QUICK_START.md  TESTING_AND_DEBUGGING.md  WEBHOOK_TROUBLESHOOTING.md
line-bot-lambda/: README.md  lambda_function.py  pyproject.toml  requirements.txt
line-bot-lambda/tests/: test_integration.py  test_lambda_function.py
scripts/: setup-line-credentials.sh  test-lambda-direct.sh  test_lambda_invoke.py  update-lambda-env.sh
