[project]
name = "agent"
version = "0.1.0"
description = "Simple Strands Agent for AgentCore Runtime"
requires-python = ">=3.10"
dependencies = [
    "bedrock-agentcore>=0.1.0",
    "strands-agents>=0.1.0",
    "botocore[crt]>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]
