[project]
name = "cdk-agentcore"
version = "0.1.0"
description = "AgentCore Runtime CDK Stack"
requires-python = ">=3.10"
dependencies = [
    "aws-cdk-lib>=2.235.1",
    "aws-cdk.aws-bedrock-agentcore-alpha>=2.235.1a0",
    "boto3>=1.42.49",
    "botocore[crt]>=1.42.49",
    "constructs>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
