[project]
name = "line-bot-lambda"
version = "1.0.0"
description = "LINE Bot Lambda Function for AgentCore Runtime"
requires-python = ">=3.13"
dependencies = [
    "line-bot-sdk>=3.14.0",
    "boto3>=1.42.0",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
