[project]
name = "line-bot-lambda"
version = "1.0.0"
description = "LINE Bot Lambda Function for AgentCore Runtime"
requires-python = ">=3.13"
dependencies = [
    "line-bot-sdk>=3.14.0",
    "boto3>=1.42.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.0",
    "pytest-mock>=3.14.0",
    "moto[dynamodb]>=5.0.0",
    "requests>=2.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
